force-app/main/default/objects/Access_Audit_Log__c/Access_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Access Audit Log</label>
    <nameField>
        <displayFormat>Audit-{00000}</displayFormat>
        <label>Access Audit Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>