force-app/main/default/objects/Access_Audit_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Auto-Deactivation</fullName>
            </value>
            <value>
                <fullName>Manual Deactivation</fullName>
            </value>
            <value>
                <fullName>MFA Reset</fullName>
            </value>
            <value>
                <fullName>Notification Sent</fullName>
            </value>
            <value>
                <fullName>Password Reset</fullName>
            </value>
            <value>
                <fullName>Permission Purge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>