force-app/main/default/objects/Access_Audit_Log__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Access_Audit_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>