force-app/main/default/objects/Access_Audit_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Target_User__c</columns>
    <columns>Performed_By__c</columns>
    <columns>Action__c</columns>
    <columns>Notes__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>