force-app/main/default/objects/Access_Audit_Log__c/listViews/Today_History.listView-meta.xml
<ListView>
    <fullName>Today_History</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Target_User__c</columns>
    <columns>Performed_By__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Notes__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today History</label>
</ListView>